# fastapi-template

./: .env  pyproject.toml
src/: bootstrap.py  main.py  settings.py
src/core/: loggers.py
